# low-cost-air-quality-monitoring-system

./: README.md  fix_charts.sh  fix_metrics.sh  update_average_metrics.sh  update_charts.sh
airqualitysensors/: Cargo.toml
airqualitysensors/src/: error.rs  lib.rs  main.rs
airqualitysensors_async/: Cargo.toml
airqualitysensors_async/src/: airquality.rs  airqualitysensors.rs  espnowcommunication.rs  lib.rs
communicationmodule/: .gitignore  Cargo.toml
communicationmodule/src/: communication.rs  lib.rs  (+2 more)
sim808/: Cargo.toml
webserver/: README.md  run_https.sh
webserver/backend/: .env  .gitignore  Cargo.toml  LOCATION_FUNCTIONALITY.md  README.md
webserver/backend/certificates/: README.md
webserver/backend/certs/: cert.pem  key.pem  openssl.cnf
webserver/backend/src/: certificates.rs  database.rs  geocoding.rs  handlers.rs  lib.rs  main.rs  validation.rs
webserver/backend/src/api/: air_quality.rs  mod.rs  router.rs
webserver/backend/src/config/: app_config.rs  mod.rs  server_config.rs
webserver/backend/src/database/: connection.rs
webserver/backend/src/db/: mod.rs
webserver/backend/src/db/models/: air_quality.rs  mod.rs
webserver/backend/src/dto/: air_quality.rs  mod.rs
webserver/backend/src/error/: api_error.rs
webserver/backend/src/middleware/: api_key.rs  mod.rs  rate_limit.rs
webserver/backend/src/models/: mod.rs  validation.rs
webserver/backend/src/security/: certificates.rs  mod.rs
webserver/backend/src/utils/: mod.rs  validation.rs
webserver/backend/tests/: api_tests.rs
webserver/frontend/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build.sh  compile-scss.sh  dev.sh  index.css  index.html  index.scss  run_https.sh
webserver/frontend/src/: app_main.rs  main.rs
webserver/frontend/src/app/: air_quality_client.rs  mod.rs
webserver/frontend/src/app/components/: aqi_display.rs  average_metrics.rs  location_filter.rs  mod.rs  time_filter.rs  time_series_chart.rs
webserver/frontend/src/app/instances/: carbon_ii_oxide.rs  carbon_iv_oxide.rs  humidity.rs  mod.rs  ozone.rs  particulate_matter.rs  pressure.rs  temperature.rs
webserver/frontend/src/app/instances/aqi/: aqi_metrics.rs  mod.rs
webserver/frontend/src/app/instances/average_metrics/: average_co.rs  average_co2.rs  average_environmental.rs  average_o3.rs  average_particulate.rs  mod.rs
webserver/frontend/src/app/instances/charts/: carbon_ii_oxide.rs  carbon_iv_oxide.rs  humidity.rs  mod.rs  ozone.rs  particulate_matter.rs  pressure.rs  temperature.rs
webserver/frontend/src/app/pages/: dashboard.rs
webserver/frontend/src/app/utils/: air_quality_client.rs  aqi_calculator.rs  average_calculator.rs  location_filter.rs  mod.rs  parse_timestamp.rs  range_calculations.rs  series_builder.rs  time_filter.rs  time_formatter.rs
(+31 files in other folders)
