[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
chrono = "0.4.40"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
database = { path = "../database" }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
