[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2"] }
chrono = "0.4.40"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
database = { path = "../database" }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.15", features = ["json"] }

[dev-dependencies]
