[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
plotters = "0.3.7"
reqwest = { version = "0.12", features = ["json"] }
plotters-canvas = "0.3.1"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d"] }
chrono = "0.4.40"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
serde = "1.0.219"
log = "0.4.27"
